NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/NATT_PriceAdjustmentStaging__c.object-meta.xml
<CustomObject>
    <description>Staging object for imported PartsNet price adjustments (discount or markup) for the assorted Customer Price Group/Item Price Group combinations (RCGWEB22 &amp; RCGWEB25). Does not include quantity price break information.</description>
    <label>NATT Price Adjustment Staging</label>
    <nameField>
        <displayFormat>PAS-{000000000}</displayFormat>
        <label>NATT Price Adjustment Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NATT Price Adjustment Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>