NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>NATT_AdjustmentType__c</fullName>
    <description>Alphanumeric code indicating the type of adjustment (e.x. REGD - Regular Discount, SURCHG - Surcharge)</description>
    <label>Adjustment Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>