NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_AdjustmentValue__c.field-meta.xml
<CustomField>
    <fullName>NATT_AdjustmentValue__c</fullName>
    <description>Contains the decimal percentage value that the list price or standard cost should be adjusted. If the value in NATT_AdjustmentName__c == SURCHG, this field will be interpreted as a MARKUP, if REGD, then will be interpreted as a discount.</description>
    <label>Adjustment Value</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>