NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_BasisCode__c.field-meta.xml
<CustomField>
    <fullName>NATT_BasisCode__c</fullName>
    <label>Basis Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>