NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_CustomerNumber__c</fullName>
    <description>Customer number this adjustment record applies to.</description>
    <label>Customer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>