NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_CustomerPriceGroup__c.field-meta.xml
<CustomField>
    <fullName>NATT_CustomerPriceGroup__c</fullName>
    <description>Identifes the Customer Price Group to which the adjustment applies.</description>
    <label>Customer Price Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>