NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>NATT_ExpiryDate__c</fullName>
    <description>Date this price expires and no longer applies</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>