NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_PriceAdjustmentKeyId__c.field-meta.xml
<CustomField>
    <fullName>NATT_PriceAdjustmentKeyId__c</fullName>
    <description>JDE key ID for the price adjustment rule/entry</description>
    <externalId>true</externalId>
    <label>Price Adjustment Key ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>