NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_PricePartial__c.field-meta.xml
<CustomField>
    <fullName>NATT_PricePartial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TBD</description>
    <label>Price Partial</label>
    <type>Checkbox</type>
</CustomField>