NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_Product__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NATT Price Adjustment Staging</relationshipLabel>
    <relationshipName>NATT_Price_Adjustment_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>