NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_QuantityFrom__c.field-meta.xml
<CustomField>
    <fullName>NATT_QuantityFrom__c</fullName>
    <description>Specifies the quantity at which this price applies.</description>
    <label>Quantity From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>