NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/fields/NATT_UOM__c.field-meta.xml
<CustomField>
    <fullName>NATT_UOM__c</fullName>
    <description>Unit of Measure</description>
    <label>Unit of Measure</label>
    <length>8</length>
    <type>Text</type>
</CustomField>