NATTQA-ENV/force-app/main/default/objects/NATT_PriceAdjustmentStaging__c/recordTypes/NATT_PPG.recordType-meta.xml
<RecordType>
    <fullName>NATT_PPG</fullName>
    <active>true</active>
    <label>NATT PPG</label>
</RecordType>